<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="auto"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    tools:context="com.example.aravi.currencybroadcastsender.MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/cursor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/titleID"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="174dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:focusable="false"
        android:focusedByDefault="false"
        android:inputType="textPersonName"
        android:text="@string/label1"
        app:layout_constraintBaseline_toBaselineOf="@+id/amountFieldId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/amountFieldId" />

    <EditText
        android:id="@+id/amountFieldId"
        android:layout_width="174dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="42dp"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:filterTouchesWhenObscured="true"
        android:focusable="auto"
        android:focusedByDefault="false"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cursor" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="textPersonName"
        android:text="@string/label2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <Spinner
        android:id="@+id/currencyDropdownId"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:entries="@array/currency"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText7"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/convertButtonId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/convertButton"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <TextView
        android:id="@+id/statusId"
        android:layout_width="207dp"
        android:layout_height="36dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="92dp"
        android:layout_marginTop="8dp"
        android:text="@string/status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertButtonId"
        app:layout_constraintVertical_bias="0.35000002" />
</android.support.constraint.ConstraintLayout>
